This documents significant changes in the dev branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2022-10-07:

- Fixed BUG_BRACQUOT: single and double shell quotes did not work to escape
  the !, ^ or - operators in a bracket expression within a glob pattern.

- The -e option of test/[/[[ no longer returns true for pseudodevices that are
  only supported by the shell and do not in fact exist in the file system, such
  as /dev/tcp/*. This reverts a change made in ksh 93u- on 2010-08-24.

2022-09-28:

- Fixed a bug where LINENO was reset to 1 after being temporarily changed in
  an assignment preceding a regular command (e.g. LINENO=5 true).

2022-09-27:

- Fixed a parsing bug in (uncommonly used) function definitions of the
  form 'functname() simple_command' that could cause the first word of
  simple_command to be corrupted with trailing garbage.

2022-09-25:

- Backported support for 'print -u p' from ksh93v- 2014-06-06 (this is
  equivalent to using 'print -p').

- Fixed a bug introduced on 2021-04-04 that incorrectly allowed 'typeset' to
  turn off the readonly and export attributes on a readonly variable.

- Fixed multiple scoping-related bugs in the += additive assignment operator,
  including a bug introduced on 2021-04-11 that caused it to append to the
  value of a global variable when used on a local variable with the same name.

2022-09-24:

- The down arrow key can now be used to perform a backwards reverse search,
  similar to how the up arrow key functions.

- The Page Up and Page Down keys can now also be used to perform reverse
  searches forwards and backwards.

- A new arrowkeysearch shell option can be used to disable backwards reverse
  search using the arrow keys. (Page Up and Page Down will still search).

- In the emacs line editor, the Ctrl+R reverse-search prompt is now visually